# rsp2

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  crates  environment.yml  layers.yaml  requirements.txt  settings.yaml  test.yaml
.github/workflows/: rust.yml
crates.d/: config.example.toml  crates.toml  lammps-sys.Cargo.toml  rsp2-array-types.Cargo.toml  rsp2-array-utils.Cargo.toml  rsp2-assert-close.Cargo.toml  rsp2-bond-polarizability-bin.Cargo.toml  rsp2-bond-polarizability.Cargo.toml  rsp2-byte-tools-plus-float.Cargo.toml  rsp2-clap.Cargo.toml  rsp2-config-utils.Cargo.toml  rsp2-dftbplus.Cargo.toml  rsp2-dynmat.Cargo.toml  rsp2-eigenvector-classify.Cargo.toml  rsp2-fs-util.Cargo.toml  rsp2-integration-test.Cargo.toml  rsp2-lammps-wrap.Cargo.toml  rsp2-linalg.Cargo.toml  rsp2-matrix.Cargo.toml  rsp2-minimize.Cargo.toml  rsp2-ndarray.Cargo.toml  rsp2-newtype-indices.Cargo.toml  rsp2-numtheory.Cargo.toml  rsp2-phonopy-io.Cargo.toml  rsp2-potentials.Cargo.toml  rsp2-python.Cargo.toml  rsp2-rayon-utils.Cargo.toml  rsp2-shims.Cargo.toml  rsp2-slice-math.Cargo.toml  rsp2-soa-ops.Cargo.toml  rsp2-sparse-matrix.Cargo.toml  rsp2-sparse.Cargo.toml  rsp2-structure-gen.Cargo.toml  rsp2-structure-io.Cargo.toml  rsp2-structure.Cargo.toml  rsp2-task-traits.Cargo.toml  rsp2-tasks-config.Cargo.toml  rsp2-tasks.Cargo.toml  rsp2-tempdir.Cargo.toml  rsp2-unfold-simd.Cargo.toml  (+19 more)
crates.d/git-hooks/: pre-commit
doc/: bond-polarizability.md  config.md  conventions.md  unfolding.md  updating-tests.md
etc/profile.d/: lammps.csh  lammps.sh
example-inputs/: settings.yaml
examples/: acgsd-graphene.rs  make-force-sets.rs  plot.yaml  save-bands-after-the-fact.rs  settings.yaml  shear_plot.rs  symmetry-test.rs  test-assemble.rs
examples/data/: aba-007-a.vasp  out-aba-007-a.vasp  out-super-aba-007-a.vasp  shift-00.vasp  shift-01.vasp  shift-02.vasp  shift-03.vasp  shift-04.vasp  shift-05.vasp  shift-06.vasp  shift-07.vasp
lammps-sys/: Cargo.toml
lammps-wrap/: Cargo.toml  log.lammps
lammps-wrap/src/: algo.rs  cell-reduce.rs  lib.rs  metropolis.rs  structure_tools.rs
minimize/: .gitignore
minimize/src/: lib.rs  test_functions.rs
outdir/: input-cli-args.json  input-config-sources.yaml  settings.yaml
outdir3/: input-cli-args.json  input-config-sources.yaml  settings.yaml
scripts/: ascii-layer  bond-polarizability  discrete-fft  fix-raman-tensors.py  fullerene-rotate-bond.py  phonopy_util.py  pyproject.toml  requirements.txt  setup.cfg  unfold-special.py  unfold.py  v_sim.res.xml
scripts/rsp2-pot-debug/: Cargo.toml  main.rs
scripts/unfold_lib/: Cargo.toml  __init__.py  coalesce.py  lib.rs  unfold_py.py  util.py
src/: Cargo.toml  lib.rs  main.rs
src/binary-crates/: README.md
src/binary-shims/: main.rs  rsp2-acgsd-and-dynmat.rs  rsp2-acgsd.rs  rsp2-after-diagonalization.rs  rsp2-bond-test.rs  rsp2-compute-for-phonopy.rs  rsp2-converge-vdw.rs  rsp2-dynmat-analysis.rs  rsp2-dynmat-at-q.rs  rsp2-dynmat-at-qs.rs  rsp2-dynmat-test.rs  rsp2-layer-mode-freqs.rs  rsp2-library-paths.rs  rsp2-make-supercell.rs  rsp2-max-disp.rs  rsp2-plot-vdw.rs  rsp2-rerun-analysis.rs  rsp2-save-bands-after-the-fact.rs  rsp2-shear-plot.rs  rsp2-sparse-analysis.rs  rsp2-test-rayon.rs  rsp2.rs  save-bands.rs
src/dynmat/: Cargo.toml  lib.rs
src/garbage/: hnf.rs  metropolis.rs  row-centric-doc-comment.rs  source.rs
src/lammps-sys/: Cargo.toml  build.rs
src/lammps-wrap/: .Cargo.toml.swp  Cargo.toml  lib.rs  low_level.rs
src/linalg/: Cargo.toml  hnf.rs  lib.rs
src/minimize/: Cargo.toml
src/minimize/src/: acgsd.rs  cg.rs  exact_ls.rs  fire.rs  hager_ls.rs  lib.rs  linesearch.rs  new_linesearch.rs  numerical.rs  reporting.rs  stop_condition.rs  strong_ls.rs  test.rs  test_functions.rs
src/minimize/src/util/: cache.rs  mod.rs
src/phonopy-io/: Cargo.toml  cmd.rs  filebased.rs  filetypes.rs  fs_util.rs  lib.rs  npy.rs
src/potentials/: Cargo.toml  crespi.rs  interactions.rs  lib.rs  util.rs
src/python/: Cargo.toml  README.md  build.rs  lib.rs  pyproject.toml  setup.cfg
src/structure/: Cargo.toml  element.rs  lib.rs  symmops.rs  util.rs
src/structure-gen/: Cargo.toml  assemble.rs  lib.rs
src/task-traits/: Cargo.toml  lib.rs  macros.rs  pathlike.rs  save.rs  source.rs
src/tasks/: Cargo.toml  bands.rs  cmd.rs  color.rs  config.rs  entry_points.rs  env.rs  integrate_2d.rs  lib.rs  logging.rs  meta.rs  phonopy.rs  util.rs
src/util/linalg/: Cargo.toml  lib.rs
tests/: acgsd-graphene.rs  dynmat-at-q.rs  find-perm.rs  force-constants.rs  get-gamma-dynmat.rs  kc-normals.rs  simple.rs  sparse-gnr.rs  sparse.rs
tests/resources/: 001-a-relaxed-kcz.vasp  POSCAR_GNR1.vasp  defaults.yaml  gamma-dynmat-lammps.yaml  gamma-dynmat-rust.yaml  gnr.yaml  simple-badangle.vasp  simple-bp-sign-error.yaml  simple-lammps.yaml  simple-relax-optimize-22.yaml  simple-relax-optimize.yaml  simple-rust.yaml  (+5 more)
travis/: cargo-cache.sh  install-dftbplus.sh  install-openmpi.sh  prune-target.sh
(+549 files in other folders)
