[package]
name = "sp2"
version = "0.1.0"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]

[dependencies]
sp2-array-utils = { path = "util/array" }
lammps-sys = { path = "lammps-sys" }
lammps-wrap = { path = "lammps-wrap" }
sp2-minimize = { path = "minimize" }
sp2-assert-close = { path = "util/assert-close" }

[workspace]
