[package]
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
name = "sp2"
version = "0.1.0"

[dependencies]
# (do be aware that 'cargo add' will maim this)
sp2-array-utils = { path = "util/array" }
lammps-sys = { path = "lammps-sys" }
lammps-wrap = { path = "lammps-wrap" }
sp2-minimize = { path = "minimize" }
sp2-assert-close = { path = "util/assert-close" }
sp2-structure = { path = "util/structure" }
sp2-structure-io = { path = "util/structure-io" }
sp2-slice-math = { path = "util/slice-math" }
sp2-phonopy-io = { path = "phonopy-io" }

[dev-dependencies]
rand = "0.3"
serde_json = "1.0"
env_logger = "0.4"

[workspace]
