[package]
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
name = "sp2"
version = "0.1.0"

[dependencies]
# (do be aware that 'cargo add' will maim this)
lammps-sys       = { path = "src/lammps-sys" }
sp2-lammps-wrap  = { path = "src/lammps-wrap" }
sp2-array-utils  = { path = "src/util/array" }
sp2-slice-of-array = { path = "src/util/slice-of-array" }
sp2-assert-close = { path = "src/util/assert-close" }
sp2-structure    = { path = "src/util/structure" }
sp2-structure-io = { path = "src/util/structure-io" }
sp2-slice-math   = { path = "src/util/slice-math" }
sp2-minimize     = { path = "src/minimize" }
sp2-phonopy-io   = { path = "src/phonopy-io" }
sp2-byte-tools-plus-float = { path = "src/util/byte-tools-plus-float" }
sp2-kets         = { path = "src/util/kets" }
sp2-util-macros  = { path = "src/util/macros" }
sp2-tempdir      = { path = "src/util/tempdir" }

# FIXME these should be dev-dependencies
#       but aren't due to rust-lang-nursery/rls#169
rand = "0.3"
serde_json = "1.0"
env_logger = "0.4"

[workspace]
