[metadata]
name = unfold_lib

[options]
packages = unfold_lib
py_modules=unfold,phonopy_util

install_requires =
    # rsp2 is expected to be installed using 'pip install -e'
    rsp2
    # Additional deps of the unfold script
    ase==3.18.1
    abelian==1.0.1
    sympy==1.7.1
    Pillow==8.1.0
    matplotlib==3.3.4
    numba==0.45.1

