[package]
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
name = "sp2-minimize"
version = "0.1.0"

[dependencies]
itertools = "0.6.2"
log = "0.3"
ordered-float = "0.5"
rand = "0.3.16"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
either = "1"

sp2-array-utils = { path = "../util/array" }
sp2-assert-close = { path = "../util/assert-close" }
sp2-slice-math = { path = "../util/slice-math" }
sp2-util-macros = { path = "../util/macros" }

error-chain = "0.11"

# FIXME make this dev-dependencies once rust-lang-nursery/rls#169 is fixed
env_logger = "0.4"
